--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepublish": "npx babel src --out-dir lib",
+    "prepublish": "npx babel src --out-dir lib --copy-files",
     "test": "NODE_ENV=test mocha --require @babel/register \"test/**/*.spec.js\""
   },
   "keywords": [],
