feat: typescript and shallow equality
    * Return shallowly equal state if none of the properties have changed
    * Typescript compatibility in readme
    * Updated readme with breaking changes
    * Use jest for testing
    * Converted to typescript module using rollup for build
    * Replaced npm with yarn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "allowJs": true,
-    "noEmit": true,
+    "allowJs": false,
+    "noEmit": false,
+    "outDir": "./lib",
     "strict": true,
     "isolatedModules": false,
     "esModuleInterop": true,
