--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "1.2.4",
   "description": "",
   "main": "lib/index.js",
+  "module": "lib/index.es.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "prepublish": "npx babel src --out-dir lib --copy-files",
-    "test": "NODE_ENV=test mocha --require @babel/register \"test/**/*.spec.js\""
+    "clean": "rm -rf lib",
+    "build": "rollup -c",
+    "generate-types": "tsc -p . --emitDeclarationOnly --declaration",
+    "prepublish": "yarn test && yarn clean && yarn generate-types && yarn build",
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -15,21 +20,29 @@
     "url": "https://github.com/felamaslen/create-reducer-object.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/register": "^7.0.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@types/jest": "^25.2.1",
+    "@types/sinon": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
-    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "mocha": "^5.2.0",
+    "jest": "^25.5.4",
     "prettier": "^2.0.4",
+    "rollup": "^2.7.6",
+    "rollup-plugin-typescript2": "^0.27.0",
+    "sinon": "^9.0.2",
+    "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   }
 }
